<resources>
    <string name="app_name">Whac-a-Mole</string>
    <string name="login">Bejelentkezés Google fiókkal</string>
    <string name="user_name">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="registration">Regisztráció</string>
    <string name="START">start</string>
    <string name="TOPLIST">toplist</string>
    <string name="Toplist">Toplist</string>
    <string name="email">Email register / login</string>
    <string name="login_w_email">Bejelentkezés email-lel</string>
    <string name="email_address">Email-cím</string>
    <string name="Jelszó">password</string>
    <string name="password_again">Jelszó újra</string>
    <string name="simple_login_text">Bejelentkezés</string>
    <string name="delete_registration">Regisztráció törlése</string>
    <string name="profile">profile</string>
    <string name="logout">kijelentkezés</string>
    <string name="edit_profile">profil módosítása</string>
    <string name="modify_data">Adatok módósítása</string>
    <string name="new_name">Új név</string>
    <string name="url_of_new_avatar">Új avatar URL-je</string>
    <string name="save_data">Adatok mentése</string>
    <string name="reset_scores">Eredmények törlése</string>
</resources>